# pykg2vec

./: inference.py  pyproject.toml  requirements.txt
.codesandbox/: Dockerfile
pykg2vec/data/: kgcontroller.py
pykg2vec/utils/: evaluator.py  logger.py  trainer.py
