[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Alita Moore <github@alitamail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpydoc = "^1.5.0"
sphinx-gallery = "^0.13.0"
sphinx-rtd-theme = "^1.2.0"
pytest = "^7.3.1"
pyyaml = "^6.0"
numpy = "^1.24.3"
hyperopt = "^0.2.7"
setuptools = "^67.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
